# swarm-collective-perception-with-lying-agents

./: .gitignore  CMakeLists.txt  Makefile  README.md  counting_obstacle_avoidance.bzz  obstacle_avoidance.bzz  obstacle_avoidance_environment.argos
argos/: obstacle_avoidance_environment.argos
buzz/: CMakeLists.txt  counting_obstacle_avoidance.bzz  helpers.bzz  new_obstacle_counting_algorithm.bzz
results/: store_data.txt  store_data_rs3_radius_05mm_uniform_big_dist.txt  store_data_rs3_radius_05mm_uniform_small_dist.txt  store_data_rs3_radius_20mm_uniform_big_dist.txt  store_data_rs3_radius_20mm_uniform_small_dist.txt
scripts/: plot_obstacles.py
